resources/tests/invalid_syntax/scope_delim.ct
//`Unclosed curly bracket delimiter!
//1
fn main()->i64 {
  10;